fix: kinda fix custom color dropdown from overflowing viewport

--- a/src/App.css
+++ b/src/App.css
@@ -750,6 +750,14 @@
     inset 0 0 0 1px rgba(207, 255, 0, 0.1);
 }
 
+.color-popover.open-up {
+  top: auto;
+  bottom: calc(100% + 10px);
+  box-shadow:
+    0 -24px 80px rgba(0, 0, 0, 0.58),
+    inset 0 0 0 1px rgba(207, 255, 0, 0.1);
+}
+
 .color-spectrum {
   position: relative;
   height: 148px;
